Implement davis adapter